# sql_from_models

./: Cargo.toml  README.md
sql_from_models/: Cargo.toml
sql_from_models-cli/: Cargo.toml
sql_from_models-cli/src/: generate.rs  opt.rs
sql_from_models-parser/: Cargo.toml
sql_from_models-parser/src/: parser.rs
sql_from_models-parser/src/ast/: data_type.rs  ddl.rs
sql_from_models-parser/src/ast/expression/: mod.rs
sql_from_models-parser/src/dialect/: keywords.rs
sql_from_models-parser/tests/: common.rs  hive.rs  mssql.rs  mysql.rs  postgres.rs  regression.rs  snowflake.rs  sqlite.rs
sql_from_models-parser/tests/test_utils/: mod.rs
sql_from_models-proc-macro/: Cargo.toml
sql_from_models-proc-macro/src/: getters.rs  migration_generation.rs  prelude.rs
sql_from_models-proc-macro/src/model/: constraint.rs  mod.rs
sql_from_models-proc-macro/src/model/column/: default.rs  mod.rs
sql_from_models/src/: dialect.rs  error.rs  lib.rs  prelude.rs
sql_from_models/src/private/: mod.rs
sql_from_models/src/private/scheduler/driver/: migration.rs
sql_from_models/src/private/scheduler/driver/actions/: crud.rs
sql_from_models/src/private/scheduler/table/: column.rs
sql_from_models/src/types/: big_serial.rs  chrono_impl.rs  json.rs  mod.rs  serial.rs  var_binary.rs  var_char.rs
