[package]
name = "sql_from_models-cli"
version = "0.1.3"
description = "Command-line utility for SQLx, the Rust SQL toolkit."
edition = "2018"
readme = "README.md"


keywords = ["database", "postgres", "database-management", "migration"]
categories = ["database", "command-line-utilities"]
license = "MIT OR Apache-2.0"
default-run = "sql_from_models"
authors = [
    "Jesper Axelsson <jesperaxe@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "higneer <contact@higneer.ovh>"
]

[[bin]]
name = "sql_from_models"
path = "src/bin/sql_from_models.rs"



[dependencies]
dotenv = "0.15"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "fs", "process", "io-std"] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-async-std-native-tls",
    "migrate",
    "any",
] }
futures = "0.3"
# FIXME: we need to fix both of these versions until Clap 3.0 proper is released, then we can drop `clap_derive`
# https://github.com/launchbadge/sqlx/issues/1378
# https://github.com/clap-rs/clap/issues/2705
chrono = "0.4"
anyhow = "1.0"
url = { version = "2.1.1", default-features = false }
async-trait = "0.1.30"
console = "0.14.1"
promptly = "0.3.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
glob = "0.3.0"
# workaround for https://github.com/rust-lang/rust/issues/29497
remove_dir_all = "0.7.0"
regex = "1.5.4"
structopt = "0.3.23"
clap = "4.5.24"

[features]
default = ["postgres", "sqlite", "mysql"]

# databases
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
