[package]
name = "sql_from_models"
version = "0.1.4"
edition = "2018"
license = "Apache-2.0"
description = "A migration management library for applications using PostgresSQL, MySQL or SQLite."
keywords = ["database", "postgres", "sqlite", "sql", "migration"]
readme = "../README.md"
authors = [
    "Tomas Vallotton <tvallotton@uc.cl>",
    "higneer <contact@higneer.ovh>"
]

[features]
default = ["sqlformat"]
json = ["serde", "serde_json"]
sqlx-postgres = ["sqlx", "sqlx/postgres", "sqlx/json"]
sqlx-mysql = ["sqlx", "sqlx/mysql", "sqlx/json"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite", "sqlx/json"]
# postgres = []
# sqlx = []
# rusqlite = []
# tokio_postgres = []
# serde features
# json = []
# binary = []


[dependencies]
thiserror = "1.0.29"
sql_from_models-parser = { version = "0.2.0", path = "../sql_from_models-parser" }
sql_from_models-proc-macro ={version = "0.1.2", path = "../sql_from_models-proc-macro" }
once_cell = "1.8.0"
url = "2.2.2"
sqlformat = { version = "0.2.1", optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true}
serde_json = {version = "1.0.68", optional = true}
sqlx = {version = "0.7.1", optional = true}
chrono = {version = "0.4.19", optional = true}


[dev-dependencies]

sqlx = {version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres"] }
sql_from_models = {path = "", features = ["sqlformat", "json", "sqlx", "chrono"]}
